Alteração de Background

--- a/exec007.html
+++ b/exec007.html
@@ -8,6 +8,8 @@
     <style>
         body{
             font: normal 18pt arial;
+            background: black;
+            color:aliceblue;
         }
         input{
             font: normal 18pt arial;
