--- a/aula1_10/ex001.html
+++ b/aula1_10/ex001.html
@@ -5,8 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Meu Primeiro Programa...</title>
-    <link rel="stylesheet" href="ex001.css">
-    <script src="ex001.js"></script>
+    <link rel="stylesheet" href="ex001.css"><!--Chamada CSS externo-->
+    <script src="ex001.js"></script><!--Chamada do JavaScript extrerno-->
 </head>
 
 <body>
