--- a/aula14ex/ex017/modelo.html
+++ b/aula14ex/ex017/modelo.html
@@ -13,10 +13,12 @@
     </header>
     <section>
         <div>
-            <p>Testando...</p>
+            <p>Número: <input type="number"></p>
         </div>
         <div>
-            
+            <textarea name="" id="" cols="30" rows="10">
+                
+            </textarea>
         </div>
 
     </section>
